# self_money

./: .env.example  .gitignore  BACKTEST_SUMMARY.md  ENV_SETUP.md  ETF_INFO_USAGE.md  MULTI_STRATEGY_GUIDE.md  NEW_FRAMEWORK_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  check_etf_codes.py  config.toml  data_fetcher.py  debug_tushare.py  demo.py  etf_rotation.py  grid_search_results.json  pyproject.toml  run.py  test_data_fetcher.py  test_env.py  test_etf_info.py  test_strategy.py
config/: config.yaml
examples/: multi_strategy_demo.py  parameter_optimization.py  quick_start_multi_strategy.py  run_strategy.py  run_with_demo_data.py
src/etf_rotation/: __init__.py  env_loader.py  risk_manager.py  strategy.py  utils.py
src/output/results/: etf_rotation_result_20251212_173216.json
src/quant_strategies/: __init__.py
src/quant_strategies/core/: __init__.py  backtest_engine.py  base_strategy.py  config.py  data_fetcher.py  factors.py  risk_manager.py  signal_generator.py  utils.py
src/quant_strategies/managers/: __init__.py  parameter_search.py  strategy_factory.py  strategy_manager.py
src/quant_strategies/strategies/: __init__.py  etf_rotation.py  grid_trading.py
tests/: test_factors.py  test_risk_manager.py  test_utils.py
